--- a/pom.xml
+++ b/pom.xml
@@ -116,11 +116,10 @@
 				</executions>
 				<configuration>
 					<excludes>
-						<exclude>hu\nye\progkor\fruits\model\**</exclude>
 						<exclude>hu\nye\progkor\fruits\config\**</exclude>
 						<exclude>hu\nye\progkor\fruits\controller\**</exclude>
+						<exclude>hu\nye\progkor\fruits\model\**</exclude>
 						<exclude>hu\nye\progkor\fruits\FruitsWebApplication.class</exclude>
-						<exclude>hu\nye\progkor\fruits\repository\**</exclude>
 						<exclude>*Test</exclude>
 					</excludes>
 					<rules>
@@ -141,6 +140,43 @@
 						</rule>
 					</rules>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>3.1.2</version>
+				<dependencies>
+					<dependency>
+						<groupId>com.puppycrawl.tools</groupId>
+						<artifactId>checkstyle</artifactId>
+						<version>9.3</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<consoleOutput>true</consoleOutput>
+					<encoding>UTF-8</encoding>
+					<configLocation>google_checks.xml</configLocation>
+					<violationSeverity>warning</violationSeverity>
+					<violationIgnore>
+						CustomImportOrder,
+						DesignForExtension,
+						HiddenField,
+						HideUtilityClassConstructor,
+						JavadocPackage,
+						JavadocVariable,
+						MissingJavadocMethod,
+						MissingJavadocType
+					</violationIgnore>
+				</configuration>
+				<executions>
+					<execution>
+						<id>check-google-checks</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
