--- a/pom.xml
+++ b/pom.xml
@@ -181,4 +181,11 @@
 		</plugins>
 	</build>
 
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub Packages</name>
+			<url>https://maven.pkg.github.com/VZsolt23/fruitswebapp-progkor</url>
+		</repository>
+	</distributionManagement>
 </project>
